# pi-py

./: .gitignore  CLAUDE.md  FUTURE_ENHANCEMENTS.md  LICENSE  README.md  models.json  pyproject.toml  pyrightconfig.json  test_live.py
.github/workflows/: ci.yml  publish.yml
docs/: image_models.md  models.md  providers.md  python-sdk-plan.md
examples/: ask.py  chat.py  codebase_qa.py  journal.py  model_stream.py  one_shot.py  sync_usage.py  webhook_agent.py  with_approvals.py
src/pi_py_agent/: __init__.py  app.py  cli.py  render.py
src/pi_py_sdk/: __init__.py  _discovery.py  client.py  config.py  errors.py  jsonl.py  model.py  protocol.py  sync.py  transport.py
src/pi_py_sdk/_shim/: stream.mjs
tests/: test_client_fake.py  test_commands.py  test_integration.py  test_jsonl.py  test_messages.py  test_model_fake.py  test_model_integration.py  test_protocol.py  test_render.py  test_repl_helpers.py  test_sync.py  test_ui_and_events.py
