[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-py-sdk"
version = "0.0.1"
description = "Python SDK for the Pi coding agent (pi-agent-core) over its RPC bridge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jeff Jacobsen" }]
keywords = ["pi", "agent", "llm", "rpc", "coding-agent"]
dependencies = [
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/earendil-works/pi"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_py_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a real `pi` binary and a provider API key (deselect with -m 'not integration')",
]
