[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-py-sdk"
version = "0.2.0"
description = "Python SDK for the Pi coding agent (pi-agent-core) over its RPC bridge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jeff Jacobsen" }]
keywords = ["pi", "agent", "llm", "rpc", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pi-py = "pi_py_agent.cli:main"

[project.urls]
Homepage = "https://github.com/earendil-works/pi"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_py_sdk", "src/pi_py_agent"]
# The Node model-streaming shim is a data file inside the package; make sure it ships.
artifacts = ["src/pi_py_sdk/_shim/*.mjs"]

[tool.hatch.build.targets.wheel.force-include]
"src/pi_py_sdk/_shim/stream.mjs" = "pi_py_sdk/_shim/stream.mjs"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Integration tests are opt-in: run them with `pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: requires a real `pi` binary (run with -m integration)",
]
